--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 encoding: UTF-8
-title: Tesla Display
+title: TLPlayer - Tesla Lossless Music Player
 email: blackpill@msn.com
 description: >- # this means to ignore newlines until "baseurl:"
   A FREE screen mirror app for Tesla owners. This app can cast your small screen of your mobile phone to the large
   screen of your Tesla.
-baseurl: /tesla-display # the subpath of your site, e.g. /blog
-url: https://blackpill.github.io # the base hostname & protocol for your site, e.g. http://example.com
+baseurl:  # the subpath of your site, e.g. /blog
+url: https://tlplayer.com # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: blackpill
 github_username: blackpill
 
